Security: Fix vulnerabilities and update dependencies
- Updated python-multipart 0.0.6 → 0.0.18 (fixes ReDos vulnerability)
- Updated transformers 4.41.0 → 4.47.0 (fixes deserialization vulnerability)
- Added explicit PyYAML>=6.0.3 pin (pre-built wheels for Python 3.11/3.12)
- Updated numpy comment to reflect Python 3.11/3.12 compatibility
- Added Dependabot configuration for automated dependency updates
- Added GitHub Actions security scanning workflow (pip-audit, Gitleaks, npm audit, CodeQL)
- Verified no secrets committed to repository
- All tests passing (19 integration tests + 11 unit tests)

Security audit completed: SECURITY_AUDIT_2025.md, SECURITY_FIXES_APPLIED.md, SECURITY_QUICK_REFERENCE.md

--- a/backend/requirements-render.txt
+++ b/backend/requirements-render.txt
@@ -12,7 +12,7 @@ alembic>=1.13.0  # Database migrations (required for pre-deploy)
 # Web API (FastAPI + ASGI server)
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-python-multipart==0.0.6  # Required for file upload endpoints
+python-multipart==0.0.18  # Required for file upload endpoints (updated for security)
 
 # HTTP client for Nomic API calls
 requests>=2.31.0
