--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,13 +3,13 @@ psycopg2-binary>=2.9.9
 alembic>=1.13.0
 sqlalchemy>=2.0.07
 python-dotenv==1.0.0
-numpy>=1.24.3,<2.0.0  # Use >=1.24.3 for Python 3.12 compatibility (pre-built wheels)
+numpy==1.26.4  # Pinned version with pre-built wheels for Python 3.11/3.12
 tqdm==4.66.1
 
 # Web API dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-python-multipart==0.0.6
+python-multipart==0.0.18
 aiofiles==23.2.1
 celery==5.3.4
 redis==5.0.1
@@ -25,7 +25,7 @@ google-auth-oauthlib==1.1.0
 
 # Text processing and embeddings
 sentence-transformers>=2.7.0
-transformers>=4.41.0
+transformers>=4.47.0
 
 # Enhanced Audio transcription with latest Whisper models
 # Removed WhisperX - using faster-whisper + asr_diarize_v4 directly
@@ -56,6 +56,7 @@ aiohttp-socks==0.8.4
 # Optional development tools
 black==23.9.1
 ruff==0.0.292
+pyyaml>=6.0.3  # Pre-built wheels for Python 3.11/3.12 (required by pre-commit)
 pre-commit==3.4.00
 beautifulsoup4>=4.12.0
 lxml>=4.9.0
