--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,22 +19,22 @@
   "dependencies": {
     "@types/node": "^20.10.0",
     "@types/pg": "^8.10.7",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "lucide-react": "^0.553.0",
-    "next": "^15.5.0",
+    "next": "15.5.7",
     "pg": "^8.11.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.0",
     "@testing-library/jest-dom": "^6.4.0",
-    "@testing-library/react": "^14.2.0",
+    "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.2.0",
     "eslint": "^8.55.0",
-    "eslint-config-next": "^15.5.0",
+    "eslint-config-next": "15.5.7",
     "jsdom": "^24.0.0",
     "vitest": "^1.2.0"
   }
