--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -53,6 +53,7 @@ apscheduler==3.10.4
 aiohttp==3.9.1
 aiohttp-socks==0.8.4
 httpx>=0.25.0  # Async HTTP client for Discord OAuth
+PyJWT>=2.8.0  # JWT token encoding/decoding for auth
 
 # Optional development tools
 black==23.9.1
